--- a/data/language/en-GB.yml
+++ b/data/language/en-GB.yml
@@ -2315,3 +2315,7 @@ strings:
   2260: "{COLOUR WINDOW_2} Length: {COLOUR BLACK}{INT32_1DP} tile(s)"
   2261: "{NEWLINE}{COLOUR WINDOW_2} Length: {COLOUR BLACK}{INT32_1DP} tile(s)"
   2262: "{NEWLINE}Length:  {INT32_1DP} tile(s)"
+  2263: "{COLOUR WINDOW_2} Music Volume:"
+  2264: "{COLOUR WINDOW_2} Ambient Volume:"
+  2265: "{COLOUR WINDOW_2} Title Volume:"
+  2266: "{COLOUR WINDOW_2} Vehicle Volume:"
