--- a/data/language/en-GB.yml
+++ b/data/language/en-GB.yml
@@ -2327,3 +2327,4 @@ strings:
   2272: "{SMALLFONT}{COLOUR BLACK}When enabled, towns will not renew or expand over time"
   2273: "Complete scenario challenge"
   2274: "Clear"
+  2275: "Delete all orders"
